objects/Decision__c.object
<CustomObject>
    <description>Custom object for Oppotunity Planning Tool (Decision Grid)</description>
    <fields>
        <fullName>Criteria__c</fullName>
        <label>Criteria</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Decision__c</fullName>
        <label>Decision</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_Plan__c</fullName>
        <label>Opportunity Plan</label>
        <referenceTo>Opportunity_Plan__c</referenceTo>
        <relationshipLabel>Decisions</relationshipLabel>
        <relationshipName>Decisions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Step__c</fullName>
        <label>Step</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>When__c</fullName>
        <label>When</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Who__c</fullName>
        <label>Who</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>contact_id__c</fullName>
        <label>contact_id</label>
        <type>TextArea</type>
    </fields>
    <label>Decision</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Decision ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Decisions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>